texi2html/test/invalid/res/texi_unknown_command_with_braces/unknown_command_with_braces.texi
\input texinfo @c -*-texinfo-*-

@setfilename unknown_command_with_braces.info

@node Top 
@top Test unknown command with braces

Unknown macro @unknown{ first paragraph

second paragraph}

@unknown2{ first paragraph

second paragraph

third}


Unknown thing @thing{}

@bye
